kubernetes/apps/monitoring/kube-prometheus-stack/manifests/alert-manager/alertmanager-ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: alertmanager-web
  namespace: monitoring
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`alertmanager.poolnode.net`)
      kind: Rule
      services:
        - name: kube-prometheus-stack-alertmanager
          kind: Service
          namespace: monitoring
          scheme: http
          port: 9093
  tls:
    secretName: poolnode-wildcard-tls
